# MicFlip

./: .gitignore  LICENSE  README.md
.github/workflows/: check.yml  release.yml
reference/macos-swift/: Package.swift  build.sh  setup-signing.sh
reference/macos-swift/Resources/: Info.plist
reference/macos-swift/Sources/MicFlip/: AppDelegate.swift  main.swift
reference/macos-swift/Sources/MicFlip/Audio/: AudioDeviceManager.swift  MicLevelMonitor.swift
reference/macos-swift/Sources/MicFlip/Core/: AppInfo.swift  Hotkey.swift  KeyNames.swift  MicController.swift  Preferences.swift  SoundPlayer.swift
reference/macos-swift/Sources/MicFlip/Hotkey/: HotkeyManager.swift
reference/macos-swift/Sources/MicFlip/UI/: HUDOverlay.swift  HotkeyRecorderView.swift  MicCheckView.swift  MicIcon.swift  SettingsView.swift  StatusBarController.swift
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  miccheck.rs
src-tauri/src/audio/: linux.rs  macos.rs  mod.rs  windows.rs
ui/: app.js  hud.html  index.html  miccheck.html  styles.css
