[package]
name = "micflip"
version = "1.0.0"
description = "Flip your mic on or off instantly"
authors = ["Maksim Rosmanuk"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"

# --- macOS: CoreAudio (raw FFI) + CoreFoundation for CFString ---
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

# --- Windows: WASAPI via the official windows crate ---
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
] }

# Linux uses `pactl` via std::process — no extra crates.

[profile.release]
opt-level = "s"
lto = true
strip = true
